--- a/backEnd/Foodano/MainPage.html
+++ b/backEnd/Foodano/MainPage.html
@@ -402,7 +402,7 @@
                 <h1 class="ls-l ls-hide-phone"
                     style="left: 950px; top: 502px; font-size: 75px; text-transform: uppercase; text-shadow: 0px 16px 24px rgba(235, 225, 225, 0.52);"
                     data-ls="offsetyin: 100; fadein: true; durationin: 1800; delayin: 600; easingin: easeInOutSine; parallax: true; parallaxlevel: 3; ">
-                    追溯您的蔬菜</h1>
+                    追溯您的生鲜</h1>
                 <div class="ls-l ls-hide-phone" style="left: 950px; top: 640px;"
                     data-ls="offsetyin: 100; fadein: true; durationin: 2000; delayin: 900; parallax: true; parallaxlevel: 2;">
                     <a href="#" class="vs-btn style2 hero-btn">更多</a>
@@ -433,7 +433,7 @@
                     保障您的健康</h1>
                 <div class="ls-l ls-hide-phone" style="left: 950px; top: 640px;"
                     data-ls="offsetyin: 100; fadein: true; durationin: 2000; delayin: 900; parallax: true; parallaxlevel: 2;">
-                    <a href="#" class="vs-btn style2 hero-btn">更多</a>
+                    <!-- <a href="#" class="vs-btn style2 hero-btn">更多</a> -->
                 </div>
             </div>
         </div>
